force-app/main/default/objects/Transfert__c/Transfert__c.object-meta.xml
<CustomObject>
    <label>Transfert</label>
    <nameField>
        <label>Nom de Transfert Lead</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transferts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>