force-app/main/default/objects/Transfert__c/fields/ActivityDetails__c.field-meta.xml
<CustomField>
    <fullName>ActivityDetails__c</fullName>
    <formula>Lead__r.ActivityDetails__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Détails activité</label>
    <type>Text</type>
</CustomField>