force-app/main/default/objects/Transfert__c/fields/AEComments__c.field-meta.xml
<CustomField>
    <fullName>AEComments__c</fullName>
    <label>Commentaire AE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>