force-app/main/default/objects/Transfert__c/fields/AppointmentDate__c.field-meta.xml
<CustomField>
    <fullName>AppointmentDate__c</fullName>
    <label>Date du Rendez-vous</label>
    <type>DateTime</type>
</CustomField>