force-app/main/default/objects/Transfert__c/fields/AppointmentType__c.field-meta.xml
<CustomField>
    <fullName>AppointmentType__c</fullName>
    <label>Type de Rendez-vous</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Téléphonique</fullName>
            </value>
            <value>
                <fullName>Au bureau</fullName>
            </value>
            <value>
                <fullName>Chez le client</fullName>
            </value>
            <value>
                <fullName>Transfert direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>