force-app/main/default/objects/Transfert__c/fields/CallBackDate__c.field-meta.xml
<CustomField>
    <fullName>CallBackDate__c</fullName>
    <formula>Lead__r.CallBackDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de rappel souhaité</label>
    <type>DateTime</type>
</CustomField>