force-app/main/default/objects/Transfert__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>Lead__r.Company</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom de l&#39;entreprise</label>
    <type>Text</type>
</CustomField>