force-app/main/default/objects/Transfert__c/fields/ContactPartenaire__c.field-meta.xml
<CustomField>
    <fullName>ContactPartenaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Partenaire</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transferts</relationshipLabel>
    <relationshipName>Transferts</relationshipName>
    <type>Lookup</type>
</CustomField>