force-app/main/default/objects/Transfert__c/fields/ContactSourceSPE__c.field-meta.xml
<CustomField>
    <fullName>ContactSourceSPE__c</fullName>
    <formula>Lead__r.ContactSourceSPE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Source SPE</label>
    <type>Text</type>
</CustomField>