force-app/main/default/objects/Transfert__c/fields/ContractSignLink__c.field-meta.xml
<CustomField>
    <fullName>ContractSignLink__c</fullName>
    <label>Lien Signature Contrat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>