force-app/main/default/objects/Transfert__c/fields/ConvertedOpportunity__c.field-meta.xml
<CustomField>
    <fullName>ConvertedOpportunity__c</fullName>
    <description>Contient l&#39;Id de l&#39;opportunité créée lors de la conversion de la lead associée à ce transfert.</description>
    <label>Opportunité convertie</label>
    <length>18</length>
    <type>Text</type>
</CustomField>