force-app/main/default/objects/Transfert__c/fields/DateLeadBackCastingError__c.field-meta.xml
<CustomField>
    <fullName>DateLeadBackCastingError__c</fullName>
    <inlineHelpText>Horodatage de la case à cocher &quot;Lead renvoyer (Erreur de casting)</inlineHelpText>
    <label>Date de retour erreur de casting</label>
    <type>DateTime</type>
</CustomField>