force-app/main/default/objects/Transfert__c/fields/Etape__c.field-meta.xml
<CustomField>
    <fullName>Etape__c</fullName>
    <label>Etape</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transfert</fullName>
                <default>true</default>
                <label>Transfert</label>
            </value>
            <value>
                <fullName>Rdv Planifié</fullName>
            </value>
            <value>
                <fullName>Rdv Echoué</fullName>
            </value>
            <value>
                <fullName>Perdu</fullName>
            </value>
            <value>
                <fullName>Nurtering</fullName>
            </value>
            <value>
                <fullName>Proposition Envoyée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>