force-app/main/default/objects/Transfert__c/fields/Evaluation_a_priori__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_a_priori__c</fullName>
    <label>Qualité de la lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1Star</fullName>
                <label>⭐</label>
            </value>
            <value>
                <fullName>2Stars</fullName>
                <label>⭐⭐</label>
            </value>
            <value>
                <fullName>3Stars</fullName>
                <label>⭐⭐⭐</label>
            </value>
            <value>
                <fullName>4Stars</fullName>
                <label>⭐⭐⭐⭐</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>