force-app/main/default/objects/Transfert__c/fields/HowDoYouKnowUs__c.field-meta.xml
<CustomField>
    <fullName>HowDoYouKnowUs__c</fullName>
    <formula>Lead__r.HowDoYouKnowUs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comment nous avez-vous connu ?</label>
    <type>Text</type>
</CustomField>