force-app/main/default/objects/Transfert__c/fields/Intrapreneur__c.field-meta.xml
<CustomField>
    <fullName>Intrapreneur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intrapreneur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transferts</relationshipName>
    <type>Lookup</type>
</CustomField>