force-app/main/default/objects/Transfert__c/fields/LeadBackCastingError__c.field-meta.xml
<CustomField>
    <fullName>LeadBackCastingError__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si un renvoi de la Lead aux SDR à été fait pour erreur de casting, cette case sera cochée.</description>
    <label>Retour erreur de casting</label>
    <type>Checkbox</type>
</CustomField>