force-app/main/default/objects/Transfert__c/fields/LeadTemperature__c.field-meta.xml
<CustomField>
    <fullName>LeadTemperature__c</fullName>
    <label>Température de la Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>🔥</fullName>
            </value>
            <value>
                <fullName>🔥🔥</fullName>
            </value>
            <value>
                <fullName>🔥🔥🔥</fullName>
            </value>
            <value>
                <fullName>🔥🔥🔥🔥</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>