force-app/main/default/objects/Transfert__c/fields/LossReason__c.field-meta.xml
<CustomField>
    <fullName>LossReason__c</fullName>
    <label>Motif de perte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abandon projet</fullName>
            </value>
            <value>
                <fullName>Auto-entreprise</fullName>
            </value>
            <value>
                <fullName>Concurrence</fullName>
            </value>
            <value>
                <fullName>Hors cible</fullName>
            </value>
            <value>
                <fullName>Injoignable</fullName>
            </value>
            <value>
                <fullName>Trop en amont</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>