force-app/main/default/objects/Transfert__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <label>Téléphone principal</label>
    <type>Phone</type>
</CustomField>