force-app/main/default/objects/Transfert__c/fields/Partenaire__c.field-meta.xml
<CustomField>
    <fullName>Partenaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partenaire</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transferts</relationshipLabel>
    <relationshipName>Transferts</relationshipName>
    <type>Lookup</type>
</CustomField>