force-app/main/default/objects/Transfert__c/fields/SourceSPE__c.field-meta.xml
<CustomField>
    <fullName>SourceSPE__c</fullName>
    <formula>Lead__r.SourceSPE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source SPE</label>
    <type>Text</type>
</CustomField>