force-app/main/default/objects/Transfert__c/fields/ToNurtur__c.field-meta.xml
<CustomField>
    <fullName>ToNurtur__c</fullName>
    <label>à Nurturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OUI</fullName>
            </value>
            <value>
                <fullName>NON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>