force-app/main/default/objects/Transfert__c/fields/TransferHour__c.field-meta.xml
<CustomField>
    <fullName>TransferHour__c</fullName>
    <formula>TIMEVALUE( TransferMonitoring__c + 0.08333333333 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Heure de transfert</label>
    <type>Time</type>
</CustomField>