force-app/main/default/objects/Transfert__c/fields/TransferMonitoring__c.field-meta.xml
<CustomField>
    <fullName>TransferMonitoring__c</fullName>
    <label>Date de transfert</label>
    <type>DateTime</type>
</CustomField>