force-app/main/default/objects/Transfert__c/fields/WillHaveEmployes__c.field-meta.xml
<CustomField>
    <fullName>WillHaveEmployes__c</fullName>
    <label>Employés?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OUI</fullName>
            </value>
            <value>
                <fullName>NON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>