force-app/main/default/objects/Transfert__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Lead__c</columns>
    <columns>AppointmentDate__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>