force-app/main/default/objects/Transfert__c/listViews/Mes_transferts_du_jour.listView-meta.xml
<ListView>
    <fullName>Mes_transferts_du_jour</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Partenaire__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TransferMonitoring__c</columns>
    <columns>AppointmentType__c</columns>
    <columns>TransferDay__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Mes transferts du jour</label>
</ListView>