force-app/main/default/objects/Transfert__c/listViews/Mes_transferts_en_cours.listView-meta.xml
<ListView>
    <fullName>Mes_transferts_en_cours</fullName>
    <columns>NAME</columns>
    <columns>TransferMonitoring__c</columns>
    <columns>AppointmentDate__c</columns>
    <columns>Etape__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Etape__c</field>
        <operation>notEqual</operation>
        <value>Perdu,Nurtering,Proposition Envoyée</value>
    </filters>
    <label>Mes transferts en cours</label>
</ListView>