force-app/main/default/objects/Transfert__c/listViews/Test.listView-meta.xml
<ListView>
    <fullName>Test</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Test</label>
</ListView>